bk_ida/gccida/c1/replace_args
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/replace_args/src/cppmacro.c:1190:23: error: unknown type name 'cpp_reader_0'; did you mean 'cpp_reader'?
void  replace_args_0( cpp_reader_0 *pfile, cpp_hashnode_0 *node, macro_arg_0 *args) 
                      ^~~~~~~~~~~~
                      cpp_reader
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/replace_args/src/cpplib.h:36:27: note: 'cpp_reader' declared here
typedef struct cpp_reader cpp_reader;
                          ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/replace_args/src/cppmacro.c:1190:44: error: unknown type name 'cpp_hashnode_0'; did you mean 'cpp_hashnode'?
void  replace_args_0( cpp_reader_0 *pfile, cpp_hashnode_0 *node, macro_arg_0 *args) 
                                           ^~~~~~~~~~~~~~
                                           cpp_hashnode
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/replace_args/src/cpplib.h:42:29: note: 'cpp_hashnode' declared here
typedef struct cpp_hashnode cpp_hashnode;
                            ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/replace_args/src/cppmacro.c:1190:66: error: unknown type name 'macro_arg_0'; did you mean 'macro_arg'?
void  replace_args_0( cpp_reader_0 *pfile, cpp_hashnode_0 *node, macro_arg_0 *args) 
                                                                 ^~~~~~~~~~~
                                                                 macro_arg
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/replace_args/src/cppmacro.c:43:26: note: 'macro_arg' declared here
typedef struct macro_arg macro_arg;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/replace_args/src/cppmacro.c:1192:1: error: unknown type name 'cpp_macro_0'; did you mean 'cpp_macro'?
cpp_macro_0 *macro; // rax 
^~~~~~~~~~~
cpp_macro
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/replace_args/src/cpplib.h:43:26: note: 'cpp_macro' declared here
typedef struct cpp_macro cpp_macro;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/replace_args/src/cppmacro.c:1194:1: error: unknown type name 'cpp_token_0'; did you mean 'cpp_token'?
cpp_token_0 *expansion; // rbp 
^~~~~~~~~~~
cpp_token
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/replace_args/src/cpplib.h:40:26: note: 'cpp_token' declared here
typedef struct cpp_token cpp_token;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/replace_args/src/cppmacro.c:1195:1: error: unknown type name 'cpp_token_0'; did you mean 'cpp_token'?
cpp_token_0 *v7; // r13 
^~~~~~~~~~~
cpp_token
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/replace_args/src/cpplib.h:40:26: note: 'cpp_token' declared here
typedef struct cpp_token cpp_token;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/replace_args/src/cppmacro.c:1196:1: error: unknown type name 'cpp_token_0'; did you mean 'cpp_token'?
cpp_token_0 **base; // r12 
^~~~~~~~~~~
cpp_token
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/replace_args/src/cpplib.h:40:26: note: 'cpp_token' declared here
typedef struct cpp_token cpp_token;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/replace_args/src/cppmacro.c:1197:1: error: unknown type name 'cpp_token_0'; did you mean 'cpp_token'?
cpp_token_0 *v9; // r14 
^~~~~~~~~~~
cpp_token
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/replace_args/src/cpplib.h:40:26: note: 'cpp_token' declared here
typedef struct cpp_token cpp_token;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/replace_args/src/cppmacro.c:1201:1: error: unknown type name 'macro_arg_0'; did you mean 'macro_arg'?
macro_arg_0 *v13; // rdx 
^~~~~~~~~~~
macro_arg
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/replace_args/src/cppmacro.c:43:26: note: 'macro_arg' declared here
typedef struct macro_arg macro_arg;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/replace_args/src/cppmacro.c:1203:7: error: unknown type name 'cpp_token_0'; did you mean 'cpp_token'?
const cpp_token_0 **p_stringified; // rbp 
      ^~~~~~~~~~~
      cpp_token
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/replace_args/src/cpplib.h:40:26: note: 'cpp_token' declared here
typedef struct cpp_token cpp_token;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/replace_args/src/cppmacro.c:1204:1: error: unknown type name 'cpp_token_0'; did you mean 'cpp_token'?
cpp_token_0 **v16; // r13 
^~~~~~~~~~~
cpp_token
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/replace_args/src/cpplib.h:40:26: note: 'cpp_token' declared here
typedef struct cpp_token cpp_token;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/replace_args/src/cppmacro.c:1206:1: error: unknown type name 'cpp_token_0'; did you mean 'cpp_token'?
cpp_token_0 *v18; // rax 
^~~~~~~~~~~
cpp_token
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/replace_args/src/cpplib.h:40:26: note: 'cpp_token' declared here
typedef struct cpp_token cpp_token;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/replace_args/src/cppmacro.c:1209:1: error: unknown type name 'macro_arg_0'; did you mean 'macro_arg'?
macro_arg_0 *v21; // rsi 
^~~~~~~~~~~
macro_arg
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/replace_args/src/cppmacro.c:43:26: note: 'macro_arg' declared here
typedef struct macro_arg macro_arg;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/replace_args/src/cppmacro.c:1213:1: error: unknown type name 'cpp_macro_0'; did you mean 'cpp_macro'?
cpp_macro_0 *v25; // [rsp+8h] [rbp-60h] 
^~~~~~~~~~~
cpp_macro
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/replace_args/src/cpplib.h:43:26: note: 'cpp_macro' declared here
typedef struct cpp_macro cpp_macro;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/replace_args/src/cppmacro.c:1214:1: error: unknown type name 'cpp_token_0'; did you mean 'cpp_token'?
cpp_token_0 **v26; // [rsp+10h] [rbp-58h] 
^~~~~~~~~~~
cpp_token
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/replace_args/src/cpplib.h:40:26: note: 'cpp_token' declared here
typedef struct cpp_token cpp_token;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/replace_args/src/cppmacro.c:1215:1: error: unknown type name 'cpp_token_0'; did you mean 'cpp_token'?
cpp_token_0 *v27; // [rsp+18h] [rbp-50h] 
^~~~~~~~~~~
cpp_token
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/replace_args/src/cpplib.h:40:26: note: 'cpp_token' declared here
typedef struct cpp_token cpp_token;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/replace_args/src/cppmacro.c:1216:1: error: unknown type name '_cpp_buff_0'; did you mean '_cpp_buff'?
_cpp_buff_0 *buff; // [rsp+28h] [rbp-40h] 
^~~~~~~~~~~
_cpp_buff
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/replace_args/src/cpphash.h:47:26: note: '_cpp_buff' declared here
typedef struct _cpp_buff _cpp_buff;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/replace_args/src/cppmacro.c:1258:24: error: expected expression
base = ( cpp_token_0 **)buff->base; 
                       ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/replace_args/src/cppmacro.c:1258:10: error: use of undeclared identifier 'cpp_token_0'
base = ( cpp_token_0 **)buff->base; 
         ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/replace_args/src/obj/cppmacro.o] Error 1
